--- a/sb/package.json
+++ b/sb/package.json
@@ -31,6 +31,12 @@
         ],
         "configuration": "./language-configuration.json"
       }
+    ],
+    "snippets": [
+      {
+        "language": "smallbasic",
+        "path": "./snippets/smallbasic.snippets.json"
+      }
     ]
   },
   "scripts": {
