feat: Socket연결 Test

--- a/sb/package.json
+++ b/sb/package.json
@@ -16,6 +16,14 @@
       {
         "command": "sb.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "sb.sendData",
+        "title": "Data보내기"
+      },
+      {
+        "command": "sb.test",
+        "title": "test"
       }
     ],
     "languages": [
@@ -55,14 +63,18 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
     "@vscode/test-cli": "^0.0.4",
-    "@vscode/test-electron": "^2.3.8"
+    "@vscode/test-electron": "^2.3.8",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "net": "^1.0.2",
+    "ws": "^8.16.0"
   }
 }
