--- a/sb/package.json
+++ b/sb/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "*"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -24,6 +26,10 @@
       {
         "command": "sb.test",
         "title": "test"
+      },
+      {
+        "command": "sb.completion",
+        "title": "completion"
       }
     ],
     "languages": [
