feat: 내림차순 배열을위한 candidates 타입 변경

--- a/sb/package.json
+++ b/sb/package.json
@@ -23,12 +23,20 @@
     ],
     "commands": [
       {
+        "command": "sb.hotkey",
+        "title": "hotkey"
+      },
+      {
         "command": "sb.helloWorld",
         "title": "Hello World"
       },
       {
         "command": "sb.subhotkey",
         "title": "subhotkey"
+      },
+      {
+        "command": "sb.test",
+        "title": "test"
       }
     ],
     "languages": [
