refactor: variable rename
불필요한 주석, 변수 이름 변경

--- a/sb/package.json
+++ b/sb/package.json
@@ -43,8 +43,8 @@
         "title": "subhotkey"
       },
       {
-        "command": "sb.test",
-        "title": "test"
+        "command": "sb.Triggertest",
+        "title": "Triggertest"
       }
     ],
     "languages": [
