--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "keybindings": [
       {
         "key": "ctrl+space",
-        "command": "sb.hotkey",
+        "command": "extension.hotkey",
         "when": "editorTextFocus && !suggestWidgetVisible"
       }
     ],
     "commands": [
       {
-        "command": "sb.hotkey",
+        "command": "extension.hotkey",
         "title": "hotkey"
       },
       {
-        "command": "sb.subhotkey",
+        "command": "extension.subhotkey",
         "title": "subhotkey"
       },
       {
-        "command": "sb.Triggertest",
+        "command": "extension.Triggertest",
         "title": "Triggertest"
       }
     ],
@@ -46,7 +46,14 @@
           ".sb",
           ".smallbasic"
         ],
-        "configuration": "./language-configuration.json"
+        "configuration": "./sb-language-configuration.json"
+      },
+      {
+        "id": "c",
+        "extensions": [
+          ".c"
+        ],
+        "configuration": "./c-language-configuration.json"
       }
     ],
     "grammars": [
